[build-system]
requires = ["setuptools>=57.4.0", "numpy>=1.21.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project]
name = "thefittest"
version = "0.1.0"
authors = [
  { name="Pavel Sherstnev", email="sherstpasha99@gmail.com" },
]
description = "Implementation of data mining methods that use evolutionary algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sherstpasha/thefittest"
